config-root/namespaces/jx/docker-registry/docker-registry-deploy.yaml
# Source: docker-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: jx
  labels:
    app: docker-registry
    chart: docker-registry-2.2.3
    release: docker-registry
    heritage: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'docker-registry'
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: docker-registry
      release: docker-registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
        release: docker-registry
      annotations:
        checksum/config: 492034f39a50c85107770255c8e115771feb08b03bd86989b039c405ed359257
        checksum/secret: 2ffa80bbd2d3d8ea863b3e14fd9e618cd0d8effddc4e3323c424c4cb1fa80fca
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
      - name: docker-registry
        image: "registry:2.8.1"
        imagePullPolicy: IfNotPresent
        command:
        - /bin/registry
        - serve
        - /etc/docker/registry/config.yml
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        resources: {}
        volumeMounts:
        - name: "docker-registry-config"
          mountPath: "/etc/docker/registry"
        - name: data
          mountPath: /var/lib/registry/
      volumes:
      - name: docker-registry-config
        configMap:
          name: docker-registry-config
      - name: data
        emptyDir: {}
